--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -13,4 +13,4 @@
 @import "../../node_modules/slick-carousel/slick/slick-theme.css"
 
 h1, h2, h3, h4, h5, h6
-    font-family: futura, sans serif
+    font-family: futura, 'Bebas Neue', sans serif
