--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Bebas+Neue|Cabin&display=swap');
+@import url("https://use.typekit.net/pfd4ayf.css");
 @import "./variables/colors"
 @import "./reset"
 @import "./blocks/card"
@@ -13,4 +14,4 @@
 @import "../../node_modules/slick-carousel/slick/slick-theme.css"
 
 h1, h2, h3, h4, h5, h6
-    font-family: futura, 'Bebas Neue', sans serif
+    font-family: futura-pt, futura, helvetica, arial, sans serif
