final font tweak

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -14,4 +14,4 @@
 @import "../../node_modules/slick-carousel/slick/slick-theme.css"
 
 h1, h2, h3, h4, h5, h6
-    font-family: futura-pt, futura, helvetica, arial, sans serif
+    font-family: futura-pt-bold, futura-pt, futura, helvetica, arial, sans serif
